--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -270,4 +270,7 @@
     <string name="smooth_display_intro">Automatically raises the refresh rate from 60 Hz to the selected high refresh rate, for some content. Increases battery usage.</string>
     <string name="smooth_display_switch">Use Smooth Display</string
 
+    <!-- App details: open play store link if app is user installed -->
+    <string name="app_play_store">Play Store</string>
+
 </resources>
