--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -268,4 +268,9 @@
     <!-- Smooth Display -->
     <string name="smooth_display_intro">Automatically raises the refresh rate from 60 Hz to the selected high refresh rate, for some content. Increases battery usage.</string>
     <string name="smooth_display_switch">Use Smooth Display</string>
+
+    <!-- Global Actions -->
+    <string name="global_actions_advanced_reboot_title">Advanced restart</string>
+    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
+
 </resources>
