--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -202,4 +202,8 @@
     <string name="network_traffic_autohide_title">Auto-hide</string>
     <string name="network_traffic_autohide_summary">Hide when speed is below 1 KB/s</string>
 
+    <!-- Global Actions -->
+    <string name="global_actions_advanced_reboot_title">Advanced restart</string>
+    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
+
 </resources>
