--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -265,4 +265,8 @@
     <string name="maintainer">Who to blame (Maintainer)</string>
     <string name="aospa_maintainer" translatable="false">XISAN</string>
 
+    <!-- General -->
+    <string name="copied_to_clipboard">Copied to clipboard</string>
+    <string name="longpress_to_clipboard">Long-press to copy</string>
+
 </resources>
