Settings: Allow choosing between high refresh rates [1/2]
On devices that have more than one high refresh rate (eg. 90/120/144 Hz)
allow choosing any of those as the peak refresh rate rather than
offering only the maximum. Use a radio picker preference, similar to
screen timeout and display resolution settings.

Change-Id: Idfd783c6828b884d2848c5f08bda415cf06458bd
Signed-off-by: Gustavo Mendes <gusttavo.me@outlook.com>

--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -265,4 +265,9 @@
     <string name="network_options_title">Options</string>
     <string name="network_traffic_autohide_title">Hide network traffic indicator if inactive</string>
     <string name="network_traffic_autohide_summary">Hide when network traffic indicator is below 1 KB/s</string>
+
+    <!-- Smooth Display -->
+    <string name="smooth_display_intro">Automatically raises the refresh rate from 60 Hz to the selected high refresh rate, for some content. Increases battery usage.</string>
+    <string name="smooth_display_switch">Use Smooth Display</string
+
 </resources>
