Settings: Add maintainer string
Change-Id: Ib3a95cd9e4399d8abb9b5f40ce5c92fdde250714

--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -258,4 +258,7 @@
     <string name="pattern_da_da_dzzz" translatable="false">da-da-dzzz</string>
     <string name="pattern_da_dzzz_da" translatable="false">da-dzzz-da</string>
 
+    <string name="maintainer">Who to blame (Maintainer)</string>
+    <string name="aospa_maintainer" translatable="false">XISAN</string>
+
 </resources>
