Settings: Add maintainer string
Change-Id: Ib3a95cd9e4399d8abb9b5f40ce5c92fdde250714

--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -206,4 +206,8 @@
     <string name="global_actions_advanced_reboot_title">Advanced restart</string>
     <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
 
+    <!-- PA maintainer -->
+    <string name="maintainer">Maintainer (Do not blame for now)</string>
+    <string name="aospa_maintainer" translatable="false">XISAN</string>
+
 </resources>
