--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -256,6 +256,12 @@
     <string name="maintainer">Maintainer</string>
     <string name="aospa_maintainer" translatable="false">XISAN</string>
 
+    <!-- Smooth Display -->
+    <string name="smooth_display_intro">Automatically raises the refresh rate from 60 Hz to the selected high refresh rate, for some content. Increases battery usage.</string>
+    <string name="smooth_display_switch">Use Smooth Display</string>
+
+    <!-- App details: open play store link if app is user installed -->
+    <string name="app_play_store">Play Store</string>
 
     <!-- Network traffic -->
     <string name="network_traffic_state_title">Network traffic indicator</string>
@@ -266,11 +272,8 @@
     <string name="network_traffic_autohide_title">Hide network traffic indicator if inactive</string>
     <string name="network_traffic_autohide_summary">Hide when network traffic indicator is below 1 KB/s</string>
 
-    <!-- Smooth Display -->
-    <string name="smooth_display_intro">Automatically raises the refresh rate from 60 Hz to the selected high refresh rate, for some content. Increases battery usage.</string>
-    <string name="smooth_display_switch">Use Smooth Display</string
-
-    <!-- App details: open play store link if app is user installed -->
-    <string name="app_play_store">Play Store</string>
+    <!-- Allow fake signature -->
+    <string name="allow_signature_fake">Allow signature spoofing</string>
+    <string name="allow_signature_fake_summary">Allow apps to bypass security systems by pretending to be a different app.</string>
 
 </resources>
